# hello

./: .coveralls.yml  .travis.yml  CMakeLists.txt  Makefile  README.md  clean.sh  get_code_cov.sh  rectangle.hh  search.sh
.circleci/: config.yml
src/: hello.cpp  rectangle.cc
src/test/: testRectangle.cpp
